<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <TextView
        android:id="@+id/savedialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trackSave"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/saveinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/saving"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:backgroundTint="@color/cardview_light_background"
        android:text="@string/save"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/abb"
        android:layout_width="144dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:backgroundTint="@color/cardview_light_background"
        android:text="@string/next"
        android:textAlignment="textStart"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:backgroundTint="@color/cardview_light_background"
        android:text="@string/discard"
        android:textColor="@color/black" />

</LinearLayout>


