<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

  <TextView
      android:id="@+id/rendialog"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/rename"
      android:textSize="30sp" />

  <EditText
      android:id="@+id/reninput"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:ems="10"
      android:inputType="textPersonName"/>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">

    <Button
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:layout_marginBottom="-5dp"
        android:backgroundTint="@color/white"
        android:text="@string/OK"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/ab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-5dp"
        android:layout_marginBottom="-5dp"
        android:backgroundTint="@color/white"
        android:text="@string/abort"
        android:textColor="@color/black" />
  </LinearLayout>

</LinearLayout>